--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AddQuestActivity">
+            <!-- Optional: Intent Filter falls benötigt -->
+        </activity>
     </application>
 
 </manifest>
