--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".AddQuestActivity">
             <!-- Optional: Intent Filter falls benötigt -->
         </activity>
+        <receiver android:name=".DailyResetReceiver" />
     </application>
 
 </manifest>
